--- a/Chat/public/config.html
+++ b/Chat/public/config.html
@@ -10,15 +10,11 @@
 <body>
     <div class="container">
         <div class="top_banner">
-            <h1>Chats</h1>
+            <h1>Settings</h1>
         </div>
 
         <div class="main_container">
-            <div class="search">
-                <form>
-                        <input type="text" class="search_bar" placeholder="search">
-                </form>
-            </div>
+            
         </div>
 
         <div class="menu_bar">
@@ -26,10 +22,10 @@
                 <a href="contacts.html"><img src="img/phone-bookGray.svg" alt=""></a>
             </div>
             <div class="menu_button">
-                <a href="home.html"><img src="img/speechBlue.svg" alt=""></a>
+                <a href="home.html"><img src="img/speechGray.svg" alt=""></a>
             </div>
             <div class="menu_button">
-                <a href="config.html"><img src="img/settingsGray.svg" alt=""></a>
+                <a href="config.html"><img src="img/settingsBlue.svg" alt=""></a>
             </div>
         </div>
     </div>
