--- a/Chat/public/contacts.html
+++ b/Chat/public/contacts.html
@@ -10,23 +10,30 @@
 <body>
     <div class="container">
         <div class="top_banner">
-            <h1>Chats</h1>
+            <h1>Contacts</h1>
         </div>
 
         <div class="main_container">
             <div class="search">
                 <form>
-                        <input type="text" class="search_bar" placeholder="search">
+                    <input type="text" class="search_bar" placeholder="search">
                 </form>
+            </div>
+
+            <div class="letter">
+                <p>Me</p>
+            </div>
+
+            <div class="contact">
             </div>
         </div>
 
         <div class="menu_bar">
             <div class="menu_button">
-                <a href="contacts.html"><img src="img/phone-bookGray.svg" alt=""></a>
+                <a href="contacts.html"><img src="img/phone-bookBlue.svg" alt=""></a>
             </div>
             <div class="menu_button">
-                <a href="home.html"><img src="img/speechBlue.svg" alt=""></a>
+                <a href="home.html"><img src="img/speechGray.svg" alt=""></a>
             </div>
             <div class="menu_button">
                 <a href="config.html"><img src="img/settingsGray.svg" alt=""></a>
