--- a/Chat/index.html
+++ b/Chat/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bienvenido a Sharkht!</title>
-<script type="text/javascript" src="./public/js/jquery-3.3.1.min.js"></script>
-	<script  defer type="text/javascript" src="./public/js/funciones.js"></script>
+<script type="text/javascript" src="./Public/js/jquery-3.3.1.min.js"></script>
+	<script  defer type="text/javascript" src="./Public/js/funciones.js"></script>
 	
 	<!-- Para que cargue al inicio -->
 
@@ -25,13 +25,14 @@
 			</div>
 			<div id="enmedio">
 				 <input type="checkbox" class="toggle-switch" checked >
+
 			</div>
 			<div id="abajo">
-				<input type="text" class="inputDatos" placeholder="Correo electronico">
-				<input type="text" class="inputDatos" placeholder="Contraseña">
+				<input type="text" class="inputDatos" id="Correo" placeholder="Correo electronico">
+				<input type="text" class="inputDatos" id="Contraseña" placeholder="Contraseña">
 				
-			<!-- 	<input type="submit" id="mandar" value="Login"> -->
-			<button id="mandar">Hola</button>
+				<input type="submit" id="login-button" class ="mandar" value="Login">
+			
 
 			</div>
 			
