--- a/Chat/public/contacts.html
+++ b/Chat/public/contacts.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="top_banner">
-            <h1>Contacts</h1>
+            <h1 id="Contacts">Contacts</h1>
         </div>
 
         <div class="main_container">
@@ -30,13 +30,13 @@
 
         <div class="menu_bar">
             <div class="menu_button">
-                <a href="contacts.html"><img src="img/phone-bookBlue.svg" alt=""></a>
+                <a href="contacts.html"><img src="img/phone-bookBlue.svg" alt=""class="image"></a>
             </div>
             <div class="menu_button">
-                <a href="home.html"><img src="img/speechGray.svg" alt=""></a>
+                <a href="home.html"><img src="img/speechGray.svg" alt="" class="image"></a>
             </div>
             <div class="menu_button">
-                <a href="config.html"><img src="img/settingsGray.svg" alt=""></a>
+                <a href="config.html"><img src="img/settingsGray.svg" alt="" class="image"></a>
             </div>
         </div>
     </div>
