--- a/Chat/Public/home.html
+++ b/Chat/Public/home.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <div class="top_banner">
-            <h1>Chats</h1>
+            <h1 id="h1-Chats">Chats</h1>
+              
         </div>
 
         <div class="main_container">
@@ -23,13 +24,13 @@
 
         <div class="menu_bar">
             <div class="menu_button">
-                <a href="contacts.html"><img src="img/phone-bookGray.svg" alt=""></a>
+                <a href="contacts.html"><img src="img/phone-bookGray.svg" alt="" class="image"></a>
             </div>
             <div class="menu_button">
-                <a href="home.html"><img src="img/speechBlue.svg" alt=""></a>
+                <a href="home.html"><img src="img/speechBlue.svg" alt=""  class="image"></a>
             </div>
             <div class="menu_button">
-                <a href="config.html"><img src="img/settingsGray.svg" alt=""></a>
+                <a href="config.html"><img src="img/settingsGray.svg" alt=""  class="image"></a>
             </div>
         </div>
     </div>
