--- a/Chat/public/chatRoom.html
+++ b/Chat/public/chatRoom.html
@@ -3,29 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/home_style.css">
+    <link rel="stylesheet" href="css/chatRoom_style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Chat</title>
 </head>
 <body>
     <div class="container">
         <div class="top_banner">
-            <div class="pPic"><img src="" alt=""></div>
+            <div class="pPic"><img src=""></div>
             <div class="pInfo">
                 <h1>User</h1>
-                <h2>online</h2>
             </div>
         </div>
 
         <div class="main_container">
-            
+            <div class="in">
+                <div class="in_p">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+                </div>
+                <div class="in_hour">
+                    <p>12:30</p>
+                </div>
+            </div>
+
+            <div class="out">
+                <div class="out_hour">
+                    <p>12:32</p>
+                </div>
+                <div class="out_p">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+                </div>
+            </div>
         </div>
 
-        <div class="input_bar">
-            <img src="" alt="">
-            <form>
+        <div class="input_banner">
+            <div class="pic"><img src="img/add.svg"></div>
+
+            <div class="input_bar">
                 <input type="text">
-            </form>
+            </div>
+
+            <div class="pic"><img src="img/send.svg"></div>
         </div>
     </div>
 </body>
