--- a/Chat/Public/home.html
+++ b/Chat/Public/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/home_style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script type="text/javascript" src="js/funciones.js"></script>
     <title>Chat</title>
 </head>
 <body>
@@ -14,7 +15,23 @@
               
         </div>
 
-        <div class="main_container">
+        <div class="main_container" id="contacts" style="display: none;">
+            <div class="search">
+                <form>
+                    <input type="text" class="search_bar" placeholder="search">
+                </form>
+            </div>
+
+            <div class="letter">
+                <p>Me</p>
+            </div>
+
+            <div class="contact">
+
+            </div>
+        </div>
+
+        <div class="main_container" id="chats">
             <div class="search">
                 <form>
                         <input type="text" class="search_bar" placeholder="search">
@@ -22,15 +39,19 @@
             </div>
         </div>
 
+        <div class="main_container" id="config" style="display: none;">
+            
+        </div>
+
         <div class="menu_bar">
             <div class="menu_button">
-                <a href="contacts.html"><img src="img/phone-bookGray.svg" alt="" class="image"></a>
+                <img src="img/phone-bookGray.svg" alt="" class="image" onclick="nav(this.id)" id="contactsButton">
             </div>
             <div class="menu_button">
-                <a href="home.html"><img src="img/speechBlue.svg" alt=""  class="image"></a>
+                <img src="img/speechBlue.svg" alt=""  class="image" onclick="nav(this.id)" id="chatsButton">
             </div>
             <div class="menu_button">
-                <a href="config.html"><img src="img/settingsGray.svg" alt=""  class="image"></a>
+                <img src="img/settingsGray.svg" alt=""  class="image" onclick="nav(this.id)" id="configButton">
             </div>
         </div>
     </div>
