Cambios en chat
solo necesita ser pulido
- imagen de usuario
- hora del mensaje
- input no crece

--- a/Chat/public/chatRoom.html
+++ b/Chat/public/chatRoom.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <div class="top_banner">
-            <div class="pPic"><img src=""></div>
+            <div class="pBack"><img src="img/back.svg"></div>
+            <div class="pPic"><img src="img/user.svg" class="userPic"></div>
             <div class="pInfo">
                 <h1>User</h1>
             </div>
@@ -19,7 +20,7 @@
         <div class="main_container">
             <div class="in">
                 <div class="in_p">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam ullam rem non maxime, optio ad perspiciatis, similique maiores illum voluptatibus ducimus inventore in! Officia animi accusamus nesciunt iusto repudiandae!</p>
                 </div>
                 <div class="in_hour">
                     <p>12:30</p>
