Falta la vista de setting

--- a/Chat/index.html
+++ b/Chat/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Bienvenido a Sharkht!</title>
 	<script type="text/javascript" src="./Public/js/jquery-3.3.1.min.js"></script>
-	<script  defer type="text/javascript" src="./Public/js/funciones.js"></script>
+	<script  defer type="text/javascript" src="./Public/js/funciones_jq.js"></script>
 	
 	<!-- Para que cargue al inicio -->
 
