--- a/Chat/Public/home.html
+++ b/Chat/Public/home.html
@@ -34,13 +34,33 @@
         <div class="main_container" id="chats">
             <div class="search">
                 <form>
-                        <input type="text" class="search_bar" placeholder="search">
+                    <input type="text" class="search_bar" placeholder="search">
                 </form>
             </div>
         </div>
 
         <div class="main_container" id="config" style="display: none;">
-            
+            <div class="global_settings">
+                <div class="profile_settings">
+                    <div class="profile_pic">
+                        <div class="profile_pic_image"><img src="img/user.svg"></div>
+                        <div class="edit_button"><a>edit</a></div>
+                    </div>
+
+                    <div class="profile_info">
+                        <div><input type="text" value="User Name"></div>
+                        <div><p>e-mail address</p></div>
+                    </div>
+                </div>
+
+                <div class="password_change">
+                    <button>change password</button>
+                </div>
+
+                <div class="save_button">
+                    <button>save changes</button>
+                </div>
+            </div>
         </div>
 
         <div class="menu_bar">
