--- a/Chat/public/chatRoom.html
+++ b/Chat/public/chatRoom.html
@@ -8,6 +8,62 @@
     <title>Chat</title>
 </head>
 <body>
+<div class="Principal">
+    <div id="Principal-contacts" style="display: none;">
+
+       <div class="ourUser">
+           <div id="ourUser-picture">
+                <div id="userPict"><img src="img/user.svg" ></div>
+           </div>
+           <div id="ajustes">
+               <div id="userPict"><img src="img/menu.png" ></div>
+           </div>
+       </div>
+        <div class="search-bar">
+            <div id="search-img">
+                <img src="img/search.png" >
+            </div>
+            <div id="search-content">
+                <input type="search" id="search-input">
+            </div>
+
+        </div>
+         <div id="message-content">
+             <div class="message-in"> 
+                <div id="img-in">
+                     <div id="userInPict"><img src="img/user.svg" ></div>
+                </div>
+                <div id="datos-in">
+                    <div id="name-in">
+                        <h3>Javier</h3>
+                    </div>
+                    <div id="little-text">
+                        <p>Hola como estas?</p>
+                    </div>
+                </div>
+             </div>
+            
+
+            <div class="message-in"> 
+                <div id="img-in">
+                     <div id="userInPict"><img src="img/user.svg" ></div>
+                </div>
+                <div id="datos-in">
+                    <div id="name-in">
+                        <h3>El Vergalarga</h3>
+                    </div>
+                    <div id="little-text">
+                        <p>Puto</p>
+                    </div>
+                </div>
+             </div>
+
+
+
+         </div>
+
+    </div>
+
     <div class="container">
         <div class="top_banner">
             <div class="pBack"><img src="img/back.svg"></div>
@@ -20,7 +76,9 @@
         <div class="main_container">
             <div class="in">
                 <div class="in_p">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam ullam rem non maxime, optio ad perspiciatis, similique maiores illum voluptatibus ducimus inventore in! Officia animi accusamus nesciunt iusto repudiandae!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam ullam rem non maxime, optio ad perspiciatis, similique maiores illum voluptatibus ducimus inventore in! Officia animi accusamus nesciunt iusto repudiandae!
+                    ffdsfsdfsdfsdfsdfdsfsdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</p>
                 </div>
                 <div class="in_hour">
                     <p>12:30</p>
@@ -28,11 +86,12 @@
             </div>
 
             <div class="out">
-                <div class="out_hour">
-                    <p>12:32</p>
-                </div>
+                
                 <div class="out_p">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+                </div>
+                <div class="out_hour">
+                    <p>12:32</p>
                 </div>
             </div>
         </div>
@@ -46,6 +105,7 @@
 
             <div class="pic"><img src="img/send.svg"></div>
         </div>
+    </div>
     </div>
 </body>
 </html>
